--- a/neat-config.cfg
+++ b/neat-config.cfg
@@ -6,8 +6,8 @@ pop_size              = 250
 reset_on_extinction   = 0
 
 [DefaultGenome]
-num_inputs              = 3
-num_hidden              = 1
+num_inputs              = 4
+num_hidden              = 2
 num_outputs             = 2
 initial_connection      = partial_direct 0.5
 feed_forward            = True
@@ -17,11 +17,12 @@ conn_add_prob           = 0.2
 conn_delete_prob        = 0.2
 node_add_prob           = 0.2
 node_delete_prob        = 0.2
-activation_default      = sigmoid
+activation_default      = tanh
 # TODO test with just tanh or sigmoid. add back identity?
-activation_options      = sigmoid tanh
+activation_options      = tanh
 # if training is slow make this smaller/larger
-activation_mutate_rate  = 0.1
+#activation_mutate_rate  = 0.1
+activation_mutate_rate  = 0.0
 aggregation_default     = sum
 aggregation_options     = sum
 aggregation_mutate_rate = 0.0
