--- a/neat-config-v2.cfg
+++ b/neat-config-v2.cfg
@@ -1,43 +1,43 @@
-# Stolen from neat-python's example
+# neat-python configuration for the LunarLander-v2 environment on OpenAI Gym
+
 [NEAT]
+pop_size              = 150
+# Note: the fitness threshold will never be reached because
+# we are controlling the termination ourselves based on simulation performance.
 fitness_criterion     = max
 fitness_threshold     = 1500
-pop_size              = 200
 reset_on_extinction   = 0
 
 [DefaultGenome]
 num_inputs              = 4
-num_hidden              = 1
+num_hidden              = 0
 num_outputs             = 2
-initial_connection      = partial_direct 0.5
+initial_connection      = partial 0.5
 feed_forward            = True
-compatibility_disjoint_coefficient    = 1.0
-compatibility_weight_coefficient      = 0.6
-conn_add_prob           = 0.2
-conn_delete_prob        = 0.2
-node_add_prob           = 0.2
-node_delete_prob        = 0.2
-activation_default      = tanh
-# TODO test with just tanh or sigmoid. add back identity?
-activation_options      = sigmoid tanh
-# if training is slow make this smaller/larger
-#activation_mutate_rate  = 0.1
-activation_mutate_rate  = 0.05
+compatibility_disjoint_coefficient = 1.0
+compatibility_weight_coefficient   = 1.0
+conn_add_prob           = 0.15
+conn_delete_prob        = 0.1
+node_add_prob           = 0.15
+node_delete_prob        = 0.1
+activation_default      = clamped
+activation_options      = clamped
+activation_mutate_rate  = 0.0
 aggregation_default     = sum
 aggregation_options     = sum
 aggregation_mutate_rate = 0.0
 bias_init_mean          = 0.0
 bias_init_stdev         = 1.0
-bias_replace_rate       = 0.1
-bias_mutate_rate        = 0.7
-bias_mutate_power       = 0.5
+bias_replace_rate       = 0.02
+bias_mutate_rate        = 0.8
+bias_mutate_power       = 0.4
 bias_max_value          = 30.0
 bias_min_value          = -30.0
 response_init_mean      = 1.0
 response_init_stdev     = 0.0
 response_replace_rate   = 0.0
-response_mutate_rate    = 0.0
-response_mutate_power   = 0.0
+response_mutate_rate    = 0.1
+response_mutate_power   = 0.01
 response_max_value      = 30.0
 response_min_value      = -30.0
 
@@ -46,8 +46,8 @@ weight_min_value        = -30
 weight_init_mean        = 0.0
 weight_init_stdev       = 1.0
 weight_mutate_rate      = 0.8
-weight_replace_rate     = 0.1
-weight_mutate_power     = 0.5
+weight_replace_rate     = 0.02
+weight_mutate_power     = 0.4
 enabled_default         = True
 enabled_mutate_rate     = 0.01
 
@@ -55,10 +55,10 @@ enabled_mutate_rate     = 0.01
 compatibility_threshold = 3.0
 
 [DefaultStagnation]
-species_fitness_func = max
-max_stagnation  = 20
+species_fitness_func = mean
+max_stagnation       = 15
+species_elitism      = 4
 
 [DefaultReproduction]
 elitism            = 2
 survival_threshold = 0.2
-
