Hyperparameter improvements; better performance

--- a/neat-config.cfg
+++ b/neat-config.cfg
@@ -2,7 +2,7 @@
 [NEAT]
 fitness_criterion     = max
 fitness_threshold     = 1500
-pop_size              = 200
+pop_size              = 150
 reset_on_extinction   = 0
 
 [DefaultGenome]
@@ -19,10 +19,10 @@ node_add_prob           = 0.2
 node_delete_prob        = 0.2
 activation_default      = tanh
 # TODO test with just tanh or sigmoid. add back identity?
-activation_options      = sigmoid tanh
+activation_options      = tanh
 # if training is slow make this smaller/larger
+activation_mutate_rate  = 0.0
 #activation_mutate_rate  = 0.1
-activation_mutate_rate  = 0.05
 aggregation_default     = sum
 aggregation_options     = sum
 aggregation_mutate_rate = 0.0
