latest round of training, fixed scaling code

--- a/neat-config.cfg
+++ b/neat-config.cfg
@@ -6,7 +6,7 @@ pop_size              = 150
 reset_on_extinction   = 0
 
 [DefaultGenome]
-num_inputs              = 4
+num_inputs              = 6
 num_hidden              = 1
 num_outputs             = 2
 initial_connection      = partial_direct 0.5
@@ -19,9 +19,9 @@ node_add_prob           = 0.2
 node_delete_prob        = 0.2
 activation_default      = tanh
 # TODO test with just tanh or sigmoid. add back identity?
-activation_options      = tanh
+activation_options      = tanh sigmoid
 # if training is slow make this smaller/larger
-activation_mutate_rate  = 0.0
+activation_mutate_rate  = 0.05
 #activation_mutate_rate  = 0.1
 aggregation_default     = sum
 aggregation_options     = sum
