new encoding of angles; doesn't work at all

--- a/neat-config.cfg
+++ b/neat-config.cfg
@@ -19,9 +19,9 @@ node_add_prob           = 0.2
 node_delete_prob        = 0.2
 activation_default      = tanh
 # TODO test with just tanh or sigmoid. add back identity?
-activation_options      = tanh sigmoid
+activation_options      = tanh
 # if training is slow make this smaller/larger
-activation_mutate_rate  = 0.05
+activation_mutate_rate  = 0.0
 #activation_mutate_rate  = 0.1
 aggregation_default     = sum
 aggregation_options     = sum
