This is the best training so far

--- a/neat-config.cfg
+++ b/neat-config.cfg
@@ -6,6 +6,7 @@ pop_size              = 150
 reset_on_extinction   = 0
 
 [DefaultGenome]
+# inputs are: ball_i, ball_j, ball_dist, goal_i, goal_j, goal_dist
 num_inputs              = 6
 num_hidden              = 1
 num_outputs             = 2
